src: Fix UI issues
Looks like in Patternfly 6, you have to add an empty sidebar to a Page
component to make in invisible. This is probably a bug of somekind

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,12 +6,22 @@ p {
 }
 
 .pf-v6-c-table tr {
-  > td, th {
-    --pf-v5-c-table--cell--PaddingTop: var(--pf-v5-global--spacer--xs);
-    --pf-v5-c-table--cell--PaddingBottom: var(--pf-v5-global--spacer--xs);
+  > td {
+    --pf-v6-c-table--cell--PaddingTop: var(--pf-v6-global--spacer--xs);
+    --pf-v6-c-table--cell--PaddingBottom: var(--pf-v6-global--spacer--xs);
 
-    padding-block: var(--pf-v5-c-table--cell--PaddingTop) var(--pf-v5-c-table--cell--PaddingBottom);
+    padding-block: var(--pf-v6-c-table--cell--PaddingTop) var(--pf-v6-c-table--cell--PaddingBottom);
 
-    padding-inline: var(--pf-v5-c-table--cell--PaddingLeft) var(--pf-v5-c-table--cell--PaddingRight);
+    padding-inline: var(--pf-v6-c-table--cell--PaddingLeft) var(--pf-v6-c-table--cell--PaddingRight);
+    padding: 0 !important;
   }
+
+  > th {
+    padding-left: 0 !important;
+    font-weight: bold;
+  }
+}
+
+.pf-v6-c-card__body {
+  padding-left: 0 !important;
 }
